# rusteze-fm

./: .gitignore  README.md
rusteze-file-manager/: Cargo.toml
rusteze-frontend/: (old)style.css  README.md  index.html  package-lock.json  script.js  twstyle.css
rusteze-server/: Cargo.toml
rusteze-server/src/: main.rs
rusteze-server/user-files/: example.txt  sub.txt
rusteze-server/user-files/sub/: my.txt
rusteze-server/user-files/sub/bigSub/: Bottom.txt
