[package]
name = "rusteze-fm"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
actix-cors = "0.7.0"
diesel = "2.2.4"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
chrono = "0.4"